##Text encoding: utf-8

2004-11-28 Jean Bréfort  <jean.brefort@normalesup.org>
	* gcu/document.h: changed signature of Document::GetNewId and made it
	private, add friend class Object.
	* gcu/document.cc: enhanced Document::GetNewId.
	* gcu/object.cc: fixed various bugs around Object::SetId and
	Object::AddChild

2004-11-17 Jean Bréfort  <jean.brefort@normalesup.org>
	* gcu/chemistry.h: fixed documentation.
	* gcu/crystalatom.cc: initialize alpha color component in constructor.
	* gcu/object.cc: fixed a bug in Object::AddType.

2004-10-10 Jean Bréfort  <jean.brefort@normalesup.org>
	* gcu/elements.xml.in,
	* glade/gtkperiodic.glade: Changed element 111 name and symbol to
	Roentgenium and Rg according to IUPAC recommendation.
	* configure.ac: updated version to 0.3.2.
	* Doxyfile: updated version to 0.3.2.
	* gcu/object.h,
	* gcu/object.cc: added an Object* parameter to BuildContextualMenu.

2004-09-17  Jean Bréfort  <jean.brefort@normalesup.org>
	* gcu-0.3.pc.in: removed obsolete gl_flags from CFlags

2004-09-17  Jean Bréfort  <jean.brefort@normalesup.org>
	* configure.ac: removed obsolete variables, added test
	for shared-mime-info package version.
	* Doxyfile: updated version to 0.3.1
	* Makefile.am: added shared mime info stuff.
	* gchemutils.xml.in: new file to support shared mime info
	(mime types tree will be polluted with chemical/* types).
	* gcu/atom.cc,
	* gcu/bond.cc,
	* gcu/element.cc,
	* gcu/crystalcleavage.cc,
	* gcu/crystaldoc.cc,
	* gcu/crystalline.cc,
	* gcu/crystalview.cc,
	* gcu/gtkchem3dviewer.cc
	* gcu/gtkcrystalviewer.cc,
	* gcu/gtkperiodic.c: Fixed some memory leaks.
	* gcu/crystalviewer.h: include gcu/matrix.h instead of just matrix
	* gcu/object.h: add support for signals and links.
	* gcu/object.cc: enhanced ~Object (), fixed a critical
	bug in Object::AddChild, implemented signals and links,
	Object::GetGroup returns NULL if there is no parent and
	fixed memory leaks.
	* gcu/xml-utils.cc: Fixed some memory leaks.
